--- a/운영체제/프로세스와 스레드의 차이.md
+++ b/운영체제/프로세스와 스레드의 차이.md
@@ -1,10 +1,10 @@
 
 
-### **프로세스와 스레드의 차이?**
+## **프로세스와 스레드의 차이?**
 
 ----
 
-#### **프로세스 (Process)**
+### **프로세스 (Process)**
 
 프로세스는 '**현재 실행되고 있는** 프로그램' 을 말한다. 우리가 크롬 브라우저 아이콘 더블클릭하면 브라우저 창이 켜지게 되는데 이때 하나의 프로세스가 실행되기 시작한 것이다. 마치 프로그램이 살아서 움직이는, 활동하는 그런 개념이라고 생각하면 될 것 같다.
 
@@ -12,13 +12,13 @@
 
 각 프로세스는 자기만의 독자적인 메모리 공간을 차지하고 있기 때문에 한 프로세스에 이상이 생겨도 다른 프로세스에는 영향이 가지 않는다.
 
-#### **스레드 (Thread)**
+### **스레드 (Thread)**
 
 스레드 역시 프로세스와 비슷한 개념이다. 현재 실행되고 있는 프로그램이라고 할 수 있는데, 프로세스와 다른 점은 스레드는 프로세스보다 좀 더 작은 실행단위라고 할 수 있다. 표현을 하자면, 한 프로세스 내에 여러 개의 스레드가 활동할 수 있다. 
 
 스레드는 한 프로세스 내에서 활동하게 되므로 프로세스 할당받은 메모리 공간을 서로 공유한다. 이 때문에 한 스레드에서 이상이 생기면 다른 스레드도 영향을 받을 수 있다.
 
-#### **프로세스와 스레드, 어떤 것을 사용해야 하나?**
+### **프로세스와 스레드, 어떤 것을 사용해야 하나?**
 
 프로세스와 스레드 중에 어떤것을 사용할지는 서로의 장단점을 고려해 개발자가 선택해서 사용해야 한다.
 
