--- a/운영체제/프로세스와 스레드의 차이.md
+++ b/운영체제/프로세스와 스레드의 차이.md
@@ -1,26 +1,34 @@
 
 
-### **프로세스와 스레드의 차이?**
+# 프로세스와 스레드의 차이?
 
 ----
 
-#### **프로세스 (Process)**
+## **프로세스 (Process)**
 
-프로세스는 '**현재 실행되고 있는** 프로그램' 을 말한다. 우리가 크롬 브라우저 아이콘 더블클릭하면 브라우저 창이 켜지게 되는데 이때 하나의 프로세스가 실행되기 시작한 것이다. 마치 프로그램이 살아서 움직이는, 활동하는 그런 개념이라고 생각하면 될 것 같다.
+프로세스는 하드 디스크에 설치되어 있는 프로그램 중에 메모리에 올라와 있는, 그러니까 **현재 실행되고 있는** 프로그램을 말한다. (프로그램의 인스턴스라고도 표현한다.) 우리가 크롬 브라우저 아이콘 더블클릭하면 브라우저 창이 켜지게 되는데 이때 하나의 프로세스가 실행되기 시작한 것이다. 마치 프로그램이 살아서 움직이는, 활동하는 그런 개념이라고 생각하면 될 것 같다.
 
 프로세스는 커널에 의해서 생성이 되는데, 브라우저 아이콘 더블클릭과 같은 사용자 요청이 있으면 커널은 프로세스를 생성하고 프로세스가 활동할 메모리 공간을 할당한다. 
 
-각 프로세스는 자기만의 독자적인 메모리 공간을 차지하고 있기 때문에 한 프로세스에 이상이 생겨도 다른 프로세스에는 영향이 가지 않는다.
+이때 할당받는 메모리 영역은 Code, Data, Stack, Heap 으로 이루어져 있다.
 
-#### **스레드 (Thread)**
+각 프로세스는 자기만의 독자적인 메모리 공간(자원)을 차지하고 있기 때문에 한 프로세스에 이상이 생겨도 다른 프로세스에는 영향이 가지 않는다.
+
+이러한 특징은 여러개의 프로세스가 병렬적으로 실행되는 멀티 프로세싱 환경에서의 치명적인 단점을 유발하는데 이는 뒤에서 다루겠다.
+
+## **스레드 (Thread)**
 
 스레드 역시 프로세스와 비슷한 개념이다. 현재 실행되고 있는 프로그램이라고 할 수 있는데, 프로세스와 다른 점은 스레드는 프로세스보다 좀 더 작은 실행단위라고 할 수 있다. 표현을 하자면, 한 프로세스 내에 여러 개의 스레드가 활동할 수 있다. 
 
-스레드는 한 프로세스 내에서 활동하게 되므로 프로세스 할당받은 메모리 공간을 서로 공유한다. 이 때문에 한 스레드에서 이상이 생기면 다른 스레드도 영향을 받을 수 있다.
+(사실은 기본적으로 하나의 프로세스가 생성되면 하나의 스레드가 같이 생성되는데 이를 메인 스레드라고 한다.)
 
-#### **프로세스와 스레드, 어떤 것을 사용해야 하나?**
+스레드는 한 프로세스 내에서 활동하게 되므로 프로세스 할당받은 메모리 공간을 서로 공유한다. 구체적으로 말하자면, 메모리 영역중에 Code, Data, Heap 영역은 스레드간의 공유하게 되고 Stack 영역은 각 스레드마다 독립적으로 할당받는다.
 
-프로세스와 스레드 중에 어떤것을 사용할지는 서로의 장단점을 고려해 개발자가 선택해서 사용해야 한다.
+
+
+## 프로세스와 스레드, 어떤 것을 사용해야 하나?
+
+프로세스와 스레드 중에 어떤 것을 사용할지는 서로의 장단점을 고려해 개발자가 선택해서 사용해야 한다.
 
 프로세스의 경우, 메모리 공간을 공유하지 않기 때문에 한 프로세스에서 문제가 생겨도 다른 프로세스는 영향을 받지 않는다는 장점이 있지만 독립적인 메모리 공간을 확보하기 때문에 프로세스가 생성될 때마다 System call 을 통해 메모리 영역을 할당받아야 한다. 결과적으로  스레드에 비해 System call 횟수가 상대적으로 많아 CPU 부하를 유발한다.
 
@@ -29,3 +37,24 @@
 그렇다면, 프로세스는 항상 메모리 공간을 공유하지 못하는 걸까? 그런것은 아니다. 
 
 오라클 DB의 경우에는  여러 프로세스가 공유하는 '공유 메모리 공간'을 두고, 각 프로세스마다 개별 메모리 공간도 두어 용도에 따라 사용하고 있다. 공유 메모리 공간에는 프로세스 간에 공유하고 싶은 데이터, 예를 들어 캐시로 저장하고 있는 데이터를 둔다.
+
+## 멀티 프로세스 VS 멀티 스레드
+
+멀티 프로세싱 환경에서는 각 프로세스가 독립적인 메모리를 할당받기 때문에 프로세스가 다른 프로세스로 전환이 될때 드는 비용인 Context Switching 비용이 스레드에 비해 매우 크다. (사실 한 프로세스 내에 메인 스레드가 존재하므로 이 Context Switch라는 것은 메인 스레드를 처리하는 것이다.)
+
+이에 비해 멀티 스레드 환경에서는 스택영역만을 독립적으로 사용하고 있기 때문에 스레드간 전환비용이 낮고, 데이터 공유 속도도  멀티 프로세스에 비해 더 빠른 편이다. 그러나, 전역변수와 같은 데이터를 공유하기 때문에 발생할 수 있는 race condition 같은 상황을 막기 위해 개발자 본인이 동기화 처리를 해주어야 한다. 
+
+## 스레드의 장점
+
+- 시스템의 자원 소모가 줄어든다
+- 프로그램의 응답 시간이 단축된다.
+- 프로세스 간 통신 방법에 비해 스레드 간의 통신 방법이 훨씬 간단하다.
+
+## 스레드의 단점
+
+- 데이터 동기화 문제
+
+- 멀티 스레드에 문제 발생시 전체 프로세스가 영향을 받는다.
+
+  ​
+
